# EarlyEducationProject

./: .gitignore  CensusAPI_Data.ipynb  CensusAPI_key.txt  CensusDataClean.ipynb  Google_distance_API_key.txt  README.md  pyproject.toml
analysis/: Spatial_join.ipynb  __main__.py  app.py  census_api.py  census_clean.py  child_centers_clean.py  distance_cleaning.py  distance_matrix_api.py  google_api_request.py  hav_distance.py  optimization.py  optimization_backup.py  optimization_backup2.py  spatial_join.py
data/: Census_data.csv  Census_data_raw.csv  Child_Care_Centers_clean.csv  US_Under5_POP.csv  census_ccc_joined.csv  census_ccc_joined_backup.csv  census_ccc_joined_backup_2.csv  data_pre_merge.csv  final_data_merged.csv  intermediate_data_backup.csv
