[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["Elena Porfidia", "Joaquin Pinto", "Miguel Perez", "Rodrigo Rivarola"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
ipython = "^8.8.0"
requests = "^2.28.1"
pathlib = "^1.0.1"
geopandas = "^0.14.3"
matplotlib = "^3.8.3"
googlemaps = "^4.10.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
